k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: get-app
      tier: backend
      track: stable
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: get-app
        tier: backend
        track: stable
    spec:
      containers:
      - name: get-app-api
        image: "shahrozemalik/nodeapp:latest"
        imagePullPolicy: Always
        resources:
          requests:
            memory: "100Mi"
            cpu: "50m"
          limits:
            memory: "200Mi"
            cpu: "100m"
        ports:
        - name: http
          containerPort: 5000
