k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: get-app
    tier: backend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5000
  - name: https
    protocol: TCP
    port: 443
    targetPort: 5000
