k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  rules:
    - host: local.astriauniversity.com
      http:
        paths:
          - path: /elearning
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
